RESOLVED FIXED50161
[GTK] Leaks in SoupCache code
https://bugs.webkit.org/show_bug.cgi?id=50161
Summary [GTK] Leaks in SoupCache code
Sergio Villar Senin
Reported 2010-11-29 08:56:50 PST
==16427== 32 bytes in 1 blocks are definitely lost in loss record 8,367 of 15,082 ==16427== at 0x4005BDC: malloc (vg_replace_malloc.c:195) ==16427== by 0x4005C66: realloc (vg_replace_malloc.c:476) ==16427== by 0x8EAC6F9: g_realloc (gmem.c:233) ==16427== by 0x8ECA744: g_string_maybe_expand (gstring.c:401) ==16427== by 0x8ECA7AB: g_string_sized_new (gstring.c:426) ==16427== by 0x7A5734C: soup_uri_to_string (soup-uri.c:435) ==16427== by 0x4C6DC86: soup_message_get_cache_key (soup-cache.c:279) ==16427== by 0x4C6F4F2: webkit_soup_cache_send_response (soup-cache.c:999) ==16427== by 0x4C6BE53: send_async_cb (soup-request-http.c:210) ==16427== by 0x8EA7174: g_timeout_dispatch (gmain.c:3873) ==16427== by 0x8EA402A: g_main_dispatch (gmain.c:2436) ==16427== by 0x8EA538E: g_main_context_dispatch (gmain.c:3009) ==16427== 104 bytes in 2 blocks are definitely lost in loss record 13,432 of 15,082 ==16427== at 0x4005BDC: malloc (vg_replace_malloc.c:195) ==16427== by 0x8EAC5E8: g_malloc (gmem.c:164) ==16427== by 0x8EC47A6: g_slice_alloc (gslice.c:842) ==16427== by 0x8EC47EB: g_slice_alloc0 (gslice.c:854) ==16427== by 0x7C172EB: g_type_create_instance (gtype.c:1867) ==16427== by 0x7BFD722: g_object_constructor (gobject.c:1603) ==16427== by 0x7BFCDEE: g_object_newv (gobject.c:1386) ==16427== by 0x7BFCB64: g_object_new (gobject.c:1298) ==16427== by 0x8DA3B81: g_simple_async_result_new (gsimpleasyncresult.c:322) ==16427== by 0x4C69CA4: webkit_soup_http_input_stream_send_async_internal (soup-http-input-stream.c:629) ==16427== by 0x4C69DC3: webkit_soup_http_input_stream_send_async (soup-http-input-stream.c:667) ==16427== by 0x4C6C16D: webkit_soup_request_http_send_async (soup-request-http.c:303) ==16427== 481 (144 direct, 337 indirect) bytes in 3 blocks are definitely lost in loss record 14,315 of 15,082 ==16427== at 0x4005BDC: malloc (vg_replace_malloc.c:195) ==16427== by 0x8EAC5E8: g_malloc (gmem.c:164) ==16427== by 0x8EC47A6: g_slice_alloc (gslice.c:842) ==16427== by 0x8E91FD1: g_hash_table_new_full (ghash.c:629) ==16427== by 0x7A3DEB3: parse_param_list (soup-headers.c:700) ==16427== by 0x7A3E022: soup_header_parse_param_list (soup-headers.c:761) ==16427== by 0x4C6D86A: get_cacheability (soup-cache.c:125) ==16427== by 0x4C702F2: webkit_soup_cache_get_cacheability (soup-cache.c:1403) ==16427== by 0x4C6F06B: msg_got_headers_cb (soup-cache.c:894) ==16427== by 0x7C11D7A: g_cclosure_marshal_VOID__VOID (gmarshal.c:79) ==16427== by 0x7BF8C5C: g_closure_invoke (gclosure.c:766) ==16427== by 0x7C1157B: signal_emit_unlocked_R (gsignal.c:3252)
Attachments
Fix for the bug (4.90 KB, patch)
2010-11-29 09:05 PST, Sergio Villar Senin
no flags
Sergio Villar Senin
Comment 1 2010-11-29 09:05:17 PST
Created attachment 75036 [details] Fix for the bug
Martin Robinson
Comment 2 2010-11-29 09:18:40 PST
Comment on attachment 75036 [details] Fix for the bug Great.
WebKit Commit Bot
Comment 3 2010-11-29 15:31:59 PST
The commit-queue encountered the following flaky tests while processing attachment 75036 [details]: http/tests/appcache/foreign-fallback.html fast/workers/storage/use-same-database-in-page-and-workers.html Please file bugs against the tests. These tests were authored by ap@webkit.org and dumi@chromium.org. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2010-11-29 19:20:30 PST
The commit-queue encountered the following flaky tests while processing attachment 75036 [details]: fast/workers/storage/use-same-database-in-page-and-workers.html inspector/elements-panel-xhtml-structure.xhtml Please file bugs against the tests. These tests were authored by apavlov@chromium.org, dumi@chromium.org, and pfeldman@chromium.org. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5 2010-11-29 19:55:26 PST
The commit-queue encountered the following flaky tests while processing attachment 75036 [details]: transitions/transition-end-event-transform.html fast/workers/storage/use-same-database-in-page-and-workers.html Please file bugs against the tests. These tests were authored by dino@apple.com, dumi@chromium.org, ojan@chromium.org, and pol@apple.com. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6 2010-11-29 20:12:35 PST
Comment on attachment 75036 [details] Fix for the bug Clearing flags on attachment: 75036 Committed r72870: <http://trac.webkit.org/changeset/72870>
WebKit Commit Bot
Comment 7 2010-11-29 20:12:40 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.