WebCore/platform/network/soup/cache/soup-http-input-stream.c
@@ -598,6 +598,7 @@ send_async_finished (GInputStream *stream)
 		g_error_free (error);
 	}
 	g_simple_async_result_complete (result);
+	g_object_unref (result);
 }
 
 static void
